<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            android:id="@+id/topheader"
            layout="@layout/customappbar" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/ll_machinename"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Machine Name: "/>
            <TextView
                android:textColor="@color/black"
                android:layout_marginLeft="2dp"
                android:id="@+id/machinename_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"

            android:orientation="horizontal">


            <EditText
                android:id="@+id/edit_machine_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbutton"
                android:hint="@string/machine_no"
                android:inputType="text"
                android:padding="16dp"
                android:visibility="visible" />
            <EditText
                android:id="@+id/edit_line_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/roundbutton"
                android:hint="@string/line_no1"
                android:inputType="text"
                android:padding="16dp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/listbg"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/customprogressbar"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/service_types_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listbg" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/roundbuttonxml"
            android:gravity="center"
            android:paddingLeft="70dp"
            android:paddingTop="10dp"
            android:paddingRight="70dp"
            android:paddingBottom="10dp"
            android:text="Enter"
            android:textColor="#F4FAFB" />
    </LinearLayout>

</RelativeLayout>